Prevent horizontal overflow by nav-access

--- a/media/redesign/stylus/structure.styl
+++ b/media/redesign/stylus/structure.styl
@@ -50,7 +50,7 @@
 }
 
 #nav-access {
-  width: 0;
+  compat-only(width, 0);
   position: absolute;
   top: -20em;
   width: 100%;
